stacks/enigma/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  creationTimestamp: "2025-04-08T18:36:15Z"
  generation: 1
  name: echo-ingress-l7-http
  namespace: cilium-test-1
  resourceVersion: "882876"
  uid: bfc5fcae-bf06-4783-8d18-eb174929425f
spec:
  description: Allow other client to GET on echo
  endpointSelector:
    matchLabels:
      any:kind: echo
  ingress:
    - fromEndpoints:
        - matchLabels:
            any:other: client
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /$
              - method: GET
                path: /public$
              - headers:
                  - "X-Very-Secret-Token: 42"
                method: GET
                path: /private$
